--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
+    "stripe": "^10.14.0",
     "supertest": "^6.2.4"
   },
   "devDependencies": {
