--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "micro": "^9.4.1",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
+    "socket.io": "^4.5.3",
     "stripe": "^10.14.0",
     "supertest": "^6.2.4"
   },
