adds orders search

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
+    "query-to-mongo": "^0.10.2",
     "socket.io": "^4.5.3",
     "stripe": "^10.14.0",
     "supertest": "^6.2.4"
