--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": " nodemon -r dotenv/config ./src/server.ts",
-    "start":"node --loader ts-node/esm ./src/server.ts"
+    "start": "node --loader ts-node/esm ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -42,7 +42,8 @@
     "query-to-mongo": "^0.10.2",
     "socket.io": "^4.5.3",
     "stripe": "^10.14.0",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
